@@ -4621,6 +4621,19 @@ part parent "m324p"
     ocdrev              = 3;
   ;
 
+#------------------------------------------------------------
+# ATmega324A
+#------------------------------------------------------------
+
+# similar to ATmega324P
+
+part parent "m324p"
+    id               = "m324a";
+    desc             = "ATmega324A";
+    signature        = 0x1e 0x95 0x15;
+
+    ocdrev              = 3;
+  ;
 
 #------------------------------------------------------------
 # ATmega644
